[tool.poetry]
name = "bunnynet"
version = "0.5.0"
description = "A client for the bunny.net APIs"

license = "MIT"

authors = [
    "Dale Myers <dale@myers.io>"
]

readme = 'README.md'

repository = "https://github.com/dalemyers/bunnynet"
homepage = "https://github.com/dalemyers/bunnynet"

keywords = ['bunny', 'bunny.net', 'cdn']

classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development',
    'Topic :: Utilities'
]

[tool.poetry.dependencies]
python = "^3.10"
deserialize = "^2.3.0"
requests = "^2.34.2"
tenacity = "^9.1.4"

[tool.poetry.group.dev.dependencies]
bandit = "1.9.4"
black = "26.5.1"
isort = "8.0.1"
mypy = "2.1.0"
pylint = "4.0.6"
pytest = "^9.1.1"
pytest-cov = "^7.1.0"
python-dotenv = "^1.2.2"
types-requests = "^2.33.0.20260518"

[[tool.mypy.overrides]]
module = [
    "deserialize"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py', '*/conftest.py']

[tool.isort]
# make it compatible with black
profile = "black" 